--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
-SUPABASE_NAME=DB_NAME
-SUPABASE_USER=DB_USER
-SUPABASE_PASS=DB_PASS
-SUPABASE_HOST=DB_HOST
-SUPABASE_PORT=DB_PORT
-SECRET_KEY=SECRET_KEEY
+SUPABASE_NAME=good
+SUPABASE_USER=postgres
+SUPABASE_PASS=allmyway1234
+SUPABASE_HOST=localhost
+SUPABASE_PORT=5432
+SECRET_KEY=allmyway1234
 SUPABASE_TESTS=DB_TEST_CASES
